package edu.hitsz.aircraft;



public interface EnemyCreator {

    public abstract AbstractEnemy createEnemy();


}
