@startuml
'https://plantuml.com/class-diagram

class EnemyCreatorPattern
{
 + CreatorPattern(ist<AbstractEnemy> enemyAircrafts,int enemyMaxNumber): void
}

abstract AbstractEnemy
{
    + AbstractEnemy(int locationX, int locationY, int speedX, int speedY, int hp, int score)
    + {abstract} shoot():List<BaseBullet>
}

interface EnemyCreator
{

    + {abstract} createEnemy(): AbstractEnemy
}

EnemyCreatorPattern ..> AbstractEnemy
EnemyCreatorPattern ..> EnemyCreator

class MobEnemy
{
   + shoot(): List<BaseBullet>
   + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp, int score)
}

class EliteEnemy
{
   + shoot(): List<BaseBullet>
   + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp, int score)
}

class BossEnemy
{
    + shoot(): List<BaseBullet>
    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp, int score)
}

class MobCreator
{

    - locationX: int
    - locationY：int
    - speedX: int
    - speedY: int
    - hp: int
    - score: int
    + createEnemy():AbstractEnemy
    + getScore(): int
    + getHp(): int
    + getLocationX(): int
    + getLocationY(): int
    + getSpeedX(): int
    + getSpeedY(): int
}


class ELiteCreator
{
     - locationX: int
     - locationY：int
     - speedX: int
     - speedY: int
     - hp: int
     - score: int
     + createEnemy():AbstractEnemy
     + getScore(): int
     + getHp(): int
     + getLocationX(): int
     + getLocationY(): int
     + getSpeedX(): int
     + getSpeedY(): int
}

class BossCreator
{
    - locationX: int
    - locationY：int
    - speedX: int
    - speedY: int
    - hp: int
    - score: int
    + createEnemy():AbstractEnemy
    + getScore(): int
    + getHp(): int
    + getLocationX(): int
    + getLocationY(): int
    + getSpeedX(): int
    + getSpeedY(): int
}

EnemyCreator <|.. MobCreator
EnemyCreator <|.. ELiteCreator
EnemyCreator <|.. BossCreator

AbstractEnemy <|-- MobEnemy
AbstractEnemy <|-- EliteEnemy
AbstractEnemy <|-- BossEnemy

MobCreator <.. MobEnemy
ELiteCreator <.. EliteEnemy
BossCreator <..  BossEnemy



@enduml